discovery: Phase 5 review — structural refactors (ScanRequest, TunerControl, wiring)
Move TunerControl off ScanRequest; it is now a plain 8-field value record with
no hardware references.  BandScanController receives an optional TunerControl via
its 9th constructor parameter and auto-falls back to surveyWide() when the in-band
survey fails with a "stepped sweep" error message.

TunerControlImpl now takes a Supplier<TunerController> so it always queries the
currently-displayed tuner rather than pinning a specific instance.  SpectralDisplayPanel
exposes getTunerController() and SDRTrunk wires new TunerControlImpl(mSpectralPanel::
getTunerController) into BandScanController at startup.  Other callers pass null.

ScanDialog Javadoc and warning banner text updated to accurately describe the
auto-fallback behaviour; Scan button is no longer disabled for wide spans.
ClickToTuneController import order nit fixed (java.time.Duration to java.* block).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>